# zmorse-cli

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml
src/: main.rs  utils.rs
wix/: main.wxs
